[package]
name = "ddf_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.21"
poise = { version = "0.6.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
derive_more = { version = "1.0.0", features = ["full"] }
itertools = "0.13.0"
strsim = "0.11.1"
thiserror = "1.0.63"
tracing-subscriber = "0.3.18"
